@@ -1,9 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-	<item android:id="@+menu_id/SERVICE" android:title="@string/MENU_SERVICE_LABEL" android:icon="@drawable/ic_menu_manage"/>
-	<item android:id="@+menu_id/STATS" android:title="@string/MENU_STATS_LABEL" android:icon="@drawable/ic_menu_view"/>
-	<item android:id="@+menu_id/ABOUT" android:title="@string/MENU_ABOUT_LABEL" android:icon="@drawable/ic_menu_info_details"/>
-	<item android:id="@+menu_id/DELETE" android:title="@string/MENU_DELETE_LABEL" android:icon="@drawable/ic_menu_delete"/>
-	<item android:id="@+menu_id/QUIT" android:title="@string/MENU_QUIT_LABEL" android:icon="@drawable/ic_menu_close_clear_cancel"/>
+	<item android:id="@+menu_id/SERVICE" android:title="@string/MENU_SERVICE_LABEL"
+		android:icon="@drawable/ic_menu_manage" />
+	<item android:id="@+menu_id/STATS" android:title="@string/MENU_STATS_LABEL"
+		android:icon="@drawable/ic_menu_view" />
+	<item android:id="@+menu_id/ABOUT" android:title="@string/MENU_ABOUT_LABEL"
+		android:icon="@drawable/ic_menu_info_details" />
+	<item android:id="@+menu_id/KML_EXPORT" android:title="@string/MENU_KML_EXPORT_LABEL"></item>
+	<item android:id="@+menu_id/QUIT" android:title="@string/MENU_QUIT_LABEL"
+		android:icon="@drawable/ic_menu_close_clear_cancel" />
 	<item android:id="@+menu_id/OPTIONS" android:title="@string/MENU_OPTIONS_LABEL"
 		android:icon="@drawable/ic_menu_more">
 		<menu>
@@ -22,7 +26,7 @@
 			<item android:id="@+menu_id/SHOW_CLOSED" android:title="@string/MENU_SHOW_CLOSED_LABEL"
 				android:enabled="true" android:checkable="true" android:checked="false"
 				android:visible="true"></item>
-			<item android:id="@+menu_id/KML_EXPORT" android:title="@string/MENU_KML_EXPORT_LABEL"></item>
+			<item android:id="@+menu_id/DELETE" android:title="@string/MENU_DELETE_LABEL" />
 		</menu>
 	</item>
 </menu>
